trying to fix background on mobile

--- a/byte-me-appengine/static/induviae_style.css
+++ b/byte-me-appengine/static/induviae_style.css
@@ -9,8 +9,10 @@ body{
   margin-right: 0px;
   margin-bottom: 0px;
   min-height: 100%;
-  background-size: cover;
-  background-attachment:fixed;
+  -webkit-background-size: 100%; 
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
